--- a/src/index.css
+++ b/src/index.css
@@ -23,13 +23,42 @@ body{
 }
 .card-items{
   /* width: 250px; */
-  height: 320px;
+  /* height: 350px; */
   /* border: 1px solid #c9c6c6; */
   border-radius:12px;
   background-color: white;
   padding: 10px;
 }
-
+.course-name{
+  text-align: left;
+  padding: 12px 0px 6px 0px;
+  color: #1C1B1B;
+  font-size: 17px;
+  font-weight: 600;
+}
+.course-desc{
+  color: rgba(28, 27, 27, 0.60);
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 21px;
+  text-align: left;
+}
+.card-info{
+  padding: 7px 0px;
+  color: rgba(28, 27, 27, 0.60);
+  font-size: 16px;
+  font-weight: 500;
+}
+.card-btn{
+  padding: 6px 0px;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid #2F80ED;
+  background: #2F80ED;
+  color: #FFF;
+  font-size: 18px;
+  font-weight: 600;
+}
 .right{
   border-radius:12px;
   background-color: white;
