--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ body{
 .card-info{
   padding: 7px 0px;
   color: rgba(28, 27, 27, 0.60);
-  font-size: 16px;
+  font-size: 15px;
   font-weight: 500;
 }
 .card-btn{
@@ -60,8 +60,34 @@ body{
   font-weight: 600;
 }
 .right{
+  text-align: left;
   border-radius:12px;
   background-color: white;
   padding: 10px;
   /* height: 512px; */
+}
+.cart-content h2{
+  padding: 12px 0px;
+  color: #2F80ED;
+  font-size: 18px;
+  font-weight: 700;
+}
+.cart-content h1{
+  padding: 8px 0px;
+  color: #1C1B1B;
+  font-size: 20px;
+  font-weight: 700;
+}
+.cart-content li{
+  padding-bottom: 4px;
+  color: rgba(28, 27, 27, 0.60);
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 30px; 
+}
+.cart-content h3{
+  padding: 8px 0px;
+  color: rgba(28, 27, 27, 0.80);
+  font-size: 16px;
+  font-weight: 500;
 }
